# TicTacToe

./: .gitignore  CMakeLists.txt  buttons.c  tictactoe.c
TicTacToe/: CMakeLists.txt
TicTacToe/include/: buttons.h  gameboard.h  logic.h  scoreboard.h
TicTacToe/src/: buttons.c  gameboard.c  logic.c  scoreboard.c  tictactoe.c
